# databricks_and_cloud_pricing

./: .env  .gitignore  README.md  env.example  main.py  pyproject.toml  run_app.py
src/: __init__.py  api_client.py  calculator.py  config.py  instance_types.txt  main.py  streamlit_app.py  utils.py
src/api/: api.py
src/calculator/: __init__.py  aws_calculator.py  calculator.py  databricks_calculator.py
tests/: test_calculation.py  test_calculator.py
